# Cinder

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh
blocks/Cairo/: CMakeLists.txt
blocks/Cairo/proj/cmake/: CMakeLists.txt
blocks/Clipper/proj/cmake/: CMakeLists.txt
blocks/InstagramOAuth/: cinderblock.xml
blocks/InstagramOAuth/include/: InstagramOAuth.h  InstagramStream.h
blocks/InstagramOAuth/proj/cmake/: CMakeLists.txt  config.cmake
blocks/InstagramOAuth/src/: InstagramOAuth.cpp  InstagramOAuthHelperApp.cpp  InstagramStream.cpp
blocks/LocationManager/proj/cmake/: CMakeLists.txt
blocks/MotionManager/proj/cmake/: CMakeLists.txt  MotionManagerConfig.cmake
blocks/MotionManager/src/cinder/: MotionManager.h
blocks/OSC/proj/cmake/: OSCConfig.cmake
blocks/TUIO/proj/cmake/: TUIOConfig.cmake
include/cinder/: CinderGlm.h  CinderImGui.h
include/glad/: glad.h  glad_egl.h  glad_es.h  glad_glx.h  glad_wgl.h
proj/android/: CMakeLists.txt
proj/cmake/: libcinder_configure.cmake  libcinder_source_files.cmake  libcinder_target.cmake  platform_linux.cmake  submodules.cmake
samples/BasicApp/vc2019/: BasicApp.vcxproj
samples/CairoBasic/proj/cmake/: CMakeLists.txt
samples/Compass/proj/cmake/: CMakeLists.txt
samples/Compass/src/: CompassApp.cpp
samples/FallingGears/proj/cmake/: CMakeLists.txt
samples/FontSample/proj/cmake/: CMakeLists.txt
samples/FrustumCulling/proj/cmake/: CMakeLists.txt
samples/Geometry/proj/cmake/: CMakeLists.txt
samples/InstagramOAuthHelperApp/: CMakeLists.txt
samples/Kaleidoscope/: README_OAUTH.md
samples/Kaleidoscope/include/: InstagramOAuth.h  InstagramStream.h
samples/Kaleidoscope/proj/cmake/: CMakeLists.txt
samples/Kaleidoscope/src/: InstagramOAuth.cpp  InstagramOAuthHelper.cpp  InstagramStream.cpp  InstagramStream.h  InstascopeApp.cpp
samples/LocationManager/proj/cmake/: CMakeLists.txt
samples/Logging/proj/cmake/: CMakeLists.txt
samples/MandelbrotGLSL/proj/cmake/: CMakeLists.txt
samples/MotionBasic/proj/cmake/: CMakeLists.txt
samples/MotionBasic/src/: MotionBasicApp.cpp
samples/MultiTouchBasic/proj/cmake/: CMakeLists.txt
samples/ParamsBasic/proj/cmake/: CMakeLists.txt
samples/QuickTimeAdvanced/proj/cmake/: CMakeLists.txt
samples/QuickTimeAvfWriter/proj/cmake/: CMakeLists.txt
samples/QuickTimeBasic/proj/cmake/: CMakeLists.txt
samples/QuickTimeIteration/proj/cmake/: CMakeLists.txt
samples/Renderer2dBasic/proj/cmake/: CMakeLists.txt
samples/SaveImage/proj/cmake/: CMakeLists.txt
samples/SerialCommunication/proj/cmake/: CMakeLists.txt
samples/StereoscopicRendering/proj/cmake/: CMakeLists.txt
samples/SurfaceBasic/proj/cmake/: CMakeLists.txt
samples/TextBox/proj/cmake/: CMakeLists.txt
samples/TextTest/proj/cmake/: CMakeLists.txt
samples/TextureFont/proj/cmake/: CMakeLists.txt
samples/Triangulation/proj/cmake/: CMakeLists.txt
samples/Tubular/proj/cmake/: CMakeLists.txt
samples/VoronoiGpu/proj/cmake/: CMakeLists.txt
samples/Wisteria/proj/cmake/: CMakeLists.txt
samples/_opengl/ObjLoader/proj/cmake/: CMakeLists.txt
samples/_svg/AnimatedReveal/proj/cmake/: CMakeLists.txt
samples/_svg/EuroMap/proj/cmake/: CMakeLists.txt
samples/_svg/GoodNightMorning/proj/cmake/: CMakeLists.txt
samples/_svg/GoodNightMorning/src/: TweetStream.cpp  TweetStream.h  TwitterConfig.h
samples/_svg/SimpleViewer/proj/cmake/: CMakeLists.txt
samples/_timeline/BasicAppendTween/proj/cmake/: CMakeLists.txt
samples/_timeline/BasicTween/proj/cmake/: CMakeLists.txt
samples/_timeline/CustomCallback/proj/cmake/: CMakeLists.txt
samples/_timeline/CustomLerp/proj/cmake/: CMakeLists.txt
samples/_timeline/DragTween/proj/cmake/: CMakeLists.txt
samples/_timeline/ImageAccordion/proj/cmake/: CMakeLists.txt
samples/_timeline/PaletteBrowser/proj/cmake/: CMakeLists.txt
samples/_timeline/PaletteBrowser/src/: Swatch.cpp
samples/_timeline/TextInputTween/proj/cmake/: CMakeLists.txt
samples/_timeline/VisualDictionary/proj/cmake/: CMakeLists.txt
samples/perlinTest/proj/cmake/: CMakeLists.txt
src/cinder/: CinderImGui.cpp
src/glad/: glad.c  glad_egl.c  glad_es.c  glad_glx.c  glad_wgl.c
